--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@
             margin: auto;
             overflow: hidden;
             position: relative;
+            padding-bottom: 20px;
         }
         /* Customize the navigation buttons */
         
@@ -206,5 +207,85 @@
             }
             nav ul li {
                 margin-right: 20px;
+            }
+        }
+        /* video section */
+        
+        .video-section .more-button {
+            background: linear-gradient(45deg, #21a99b, #f37423);
+            border: none;
+            color: white;
+            padding: 10px 40px;
+            /* Increase the padding to make the button wider */
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        
+        .video-section .more-button:hover {
+            background: linear-gradient(45deg, #f37423, #21a99b);
+        }
+        
+        .video-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            border-top: 1px solid #e0e0e0;
+            border-bottom: 1px solid #e0e0e0;
+            padding: 30px;
+        }
+        
+        .video-section .title {
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
+        
+        .video-section .content {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
+        
+        .video-section .video-text {
+            width: 100%;
+            padding: 20px;
+        }
+        
+        .video-section .video {
+            width: 100%;
+        }
+        
+        .video-section iframe {
+            width: 100%;
+            height: 300px;
+        }
+        /* Mobile Styles */
+        
+        @media (min-width: 480px) {
+            .video-section .content {
+                flex-wrap: nowrap;
+            }
+            .video-section .video-text {
+                width: 40%;
+            }
+            .video-section .video {
+                width: 60%;
+            }
+        }
+        /* Tablet Styles */
+        
+        @media (min-width: 481px) and (max-width: 1024px) {
+            /* Your tablet-specific styles go here */
+        }
+        /* Desktop Styles */
+        
+        @media (min-width: 1025px) {
+            .video-section iframe {
+                width: 60%;
+                height: 300px;
             }
         }
